<resources>    <string name="app_name" translatable="false">CheckListTag</string>    <string name="empty_state_title">empty_state_title</string>    <string name="sync_status_title">sync_status_title</string>    <string name="sync_status_synced">sync_status_synced</string>    <string name="sync_status_waiting_for_sync">sync_status_waiting_for_sync</string>    <string name="tag_status_title">tag_status_title</string>    <string name="tag_status_new">tag_status_new</string>    <string name="tag_status_linked">tag_status_linked</string>    <string name="tag_status_bind">tag_status_bind</string>    <string name="login_fragment_title">login_fragment_title</string>    <string name="login_fragment_login_action">login_fragment_login_action</string>    <string name="login_fragment_login_hint">login_fragment_login_hint</string>    <string name="login_fragment_title_password_hint">login_fragment_title_password_hint</string>    <string name="login_fragment_title_address_hint">login_fragment_title_address_hint</string></resources>