<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="model"
            type="llc.arma.checklisttag.ui.login.LoginViewModel" />

    </data>

    <LinearLayout
        android:id="@+id/loginRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_login_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/paddingLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="24dp"
                    android:layout_weight="1"
                    android:maxWidth="64dp"
                    android:maxHeight="64dp"
                    android:transitionName="logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_arma_logo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/login_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:elevation="0dp"
                    android:foregroundGravity="center"
                    android:transitionName="login_transaction"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="24dp"
                        android:layout_marginBottom="80dp"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toTopOf="@+id/textView6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3">

                        <TextView
                            style="?textAppearanceHeadline6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="24dp"
                            android:gravity="center"
                            android:text="@string/login_fragment_title"
                            android:textColor="#000000" />

                        <LinearLayout
                            android:layout_width="282dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:visibility="visible">

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/address_spinner"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:visibility="gone" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/serverInputLayout"
                                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="0dp"
                                android:hint="@string/login_fragment_title_address_hint"
                                android:textColorHint="#cccccc"
                                android:visibility="gone"
                                app:boxStrokeColor="?colorAccent"
                                app:errorEnabled="true"
                                app:hintTextColor="?colorAccent">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/serverText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="text"
                                    android:singleLine="true"
                                    android:text=""
                                    app:boxStrokeColor="?colorAccent"
                                    app:hintTextColor="?colorAccent" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="282dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/loginInputLayout"
                                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="0dp"
                                android:hint="@string/login_fragment_login_hint"
                                app:errorEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/loginText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:singleLine="true"
                                    android:text="@={model.login}" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="282dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/passwordInputlayout"
                                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="0dp"
                                android:hint="@string/login_fragment_title_password_hint"
                                app:errorEnabled="true"
                                app:passwordToggleEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/passwordText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:focusable="true"
                                    android:inputType="textPassword"
                                    android:text="@={model.pass}" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <ProgressBar
                                tools:visibility="gone"
                                android:id="@+id/progressBar"
                                style="?android:attr/progressBarStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:indeterminateOnly="true"
                                android:visibility="@{!model.isLoadingState ? View.GONE : View.VISIBLE}"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <com.google.android.material.button.MaterialButton
                                android:visibility="@{model.isLoadingState ? View.GONE : View.VISIBLE}"
                                android:onClick="@{() -> model.onLoginClicked()}"
                                android:id="@+id/loginButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/login_fragment_login_action"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                style="?materialButtonStyle"/>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>
